crates/rustynes-test-harness/tests/snapshots/external_extended__extended_mmc1_zelda_ii.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-001-MMC1/Zelda II - The Adventure of Link.nes
rom_sha256=b7cd7442cd54414100b2b3696fd14f40463c2f47408efee2afa72fe5f6ac0969
frames=600
fb_bytes=245760
cycles=17838522
audio_samples=439524
audio_fnv1a64=dde9c045bd134ff4
checkpoint f600 fb_fnv1a64=84df6326003ee854
