crates/rustynes-test-harness/tests/snapshots/external_extended__extended_mmc3_bucky_ohare.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-004-MMC3/Bucky O'Hare.nes
rom_sha256=a0c0fb8d55b064abfa4065026d06951772cb93389fda1c37ad1168b6062285fa
frames=600
fb_bytes=245760
cycles=17838524
audio_samples=439524
audio_fnv1a64=7532264891a3f7da
checkpoint f600 fb_fnv1a64=8774b232effdf3b7
