crates/rustynes-test-harness/tests/snapshots/external_extended__extended_mmc3_felix_the_cat.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
assertion_line: 74
expression: text
---
rom=mapper-004-MMC3/Felix the Cat.nes
rom_sha256=b6fdbb1d21aeff752cdfc4d4cda6865d39634c45c0653db4f0519b339a383415
frames=600
fb_bytes=245760
cycles=17838524
audio_samples=439524
audio_fnv1a64=ad4d75b0cdd46157
checkpoint f600 fb_fnv1a64=436c63f7c708aaed
