crates/rustynes-test-harness/tests/snapshots/external_extended__extended_mmc3_mega_man_4.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-004-MMC3/Mega Man 4.nes
rom_sha256=db7012a022c38ce3c1c4f7fc4cda829f39f0baeec331fe0d29adaa3e3e820463
frames=2091
fb_bytes=245760
cycles=62241249
audio_samples=1533607
audio_fnv1a64=f1d3b87aa0e0be4f
checkpoint f2000 fb_fnv1a64=72787739f6d76713
