crates/rustynes-test-harness/tests/snapshots/external_extended__extended_mmc3_mega_man_5.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-004-MMC3/Mega Man 5.nes
rom_sha256=fd722165583d3d593ce607a59868e216df97533da9189fab815592930457bb05
frames=600
fb_bytes=245760
cycles=17838523
audio_samples=439524
audio_fnv1a64=68f1e0c21d97d424
checkpoint f600 fb_fnv1a64=93cbea86f78c8e9d
