crates/rustynes-test-harness/tests/snapshots/external_extended__extended_mmc3_mega_man_6.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-004-MMC3/Mega Man 6.nes
rom_sha256=f8a92b74a81a4d66fa7d7cfeddfbe4f4b0de9b150c44373b3e14f3b04f874db6
frames=2091
fb_bytes=245760
cycles=62241252
audio_samples=1533607
audio_fnv1a64=4faa9e524e7db472
checkpoint f2000 fb_fnv1a64=1cfcaa3c9bd3239b
