crates/rustynes-test-harness/tests/snapshots/external_extended__extended_mmc3_startropics.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-004-MMC3/StarTropics.nes
rom_sha256=3a00215234cd40deacfe9caf49af4048282b384c30687f01b108bd11006aabd2
frames=1200
fb_bytes=245760
cycles=35706823
audio_samples=879798
audio_fnv1a64=581fe516bde264df
checkpoint f1200 fb_fnv1a64=dd624cf52b2c26dd
